--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.14.0",
     "axios": "^1.1.3",
     "cloudinary": "^1.33.0",
     "connect-flash": "^0.1.1",
