--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.2",
@@ -27,6 +28,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "sanitize-html": "^2.8.1"
   }
 }
